person list & card

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -27,3 +27,10 @@
   }
 }
 
+  .person-known-for {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  letter-spacing: $letter-spacing;
+}
+
