--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -211,10 +211,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .row .post {
-  width: 15%;
-  float: left;
-  margin-top : 1.5%;
-  margin-right: 1.5%;
+  // width: 15%;
+  // float: left;
+  // margin-top : 1.5%;
+  // margin-right: 1.5%;
 }
 
 .row .post img {
