--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -13,6 +13,37 @@
   }
 }
 
+
+.card__lightbox {
+  position: relative;
+  .poster {
+    height: 0;
+    padding-top: 150%;
+  }
+  .backdrop {
+    height: 0;
+    padding-top: 60%;
+  }
+  overflow: hidden;
+  background-color: $secondary-color;
+  transition: transform 0.3s ease-in-out;
+  img {
+    max-width: 50%;
+    border-radius: .5em;
+    -webkit-box-shadow: 0px 0px 76px 0px rgba(0, 0, 0, 0.47);
+    -moz-box-shadow: 0px 0px 76px 0px rgba(0, 0, 0, 0.47);
+    box-shadow: 0px 0px 76px 0px rgba(0, 0, 0, 0.47);
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: scale(0.97);
+  }
+  &.lazyloaded img {
+    transform: scale(1);
+  }
+  
+}
+
 .card-name {
   margin-top: 1rem;
   overflow: hidden;
