--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -4,7 +4,6 @@
   img {
     position: relative;
     overflow: hidden;
-    background-color: $secondary-color;
     
     transition: transform 0.3s ease-in-out;
   }
@@ -25,7 +24,6 @@
     padding-top: 60%;
   }
   overflow: hidden;
-  background-color: $secondary-color;
   transition: transform 0.3s ease-in-out;
   img {
     max-width: 50%;
@@ -254,6 +252,15 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: .5em;
   object-fit: contain;
   background-size: cover;
+}
+
+img.company {
+  width: 100%;
+  max-width: 100%;
+  height: 50%;
+  max-height: 50%;
+  border-radius: .5em;
+  
 }
 
 .row .post .title {
@@ -493,6 +500,125 @@ box-shadow: 0px 0px 76px 0px rgba(0, 0, 0, 0.47);
   text-decoration : none;
   cursor : pointer;
 }
+
+// new 
+
+.card {
+  margin-bottom: 1.5rem;
+  line-height: $base-line-height;
+
+  @media (min-width: $breakpoint-xsmall) {
+    margin-bottom: 2rem;
+  }
+}
+
+.card__lightbox {
+  position: relative;
+  .poster {
+    height: 0;
+    padding-top: 150%;
+  }
+  .backdrop {
+    height: 0;
+    padding-top: 60%;
+  }
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+  img {
+    max-width: 50%;
+    border-radius: .5em;
+    -webkit-box-shadow: 0px 0px 76px 0px rgba(0, 0, 0, 0.47);
+    -moz-box-shadow: 0px 0px 76px 0px rgba(0, 0, 0, 0.47);
+    box-shadow: 0px 0px 76px 0px rgba(0, 0, 0, 0.47);
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: scale(0.97);
+  }
+  &.lazyloaded img {
+    transform: scale(1);
+  }
+  
+}
+.card__img {
+  position: relative;
+  height: 0;
+  padding-top: 150.27%;
+  overflow: hidden;
+  background-size: contain;
+  transition: transform 0.3s ease-in-out;
+
+  img,
+  span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: scale(0.97);
+  }
+
+  span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.3rem;
+
+    @media (min-width: $breakpoint-large) {
+      font-size: 1.6rem;
+    }
+  }
+
+  &.lazyloaded img {
+    transform: scale(1);
+  }
+}
+
+.card__link:hover,
+.card__link:focus {
+  .card__img {
+    transform: scale(1.02);
+  }
+}
+
+.card__name {
+  margin-top: 1rem;
+  overflow: hidden;
+  font-size: 1.3rem;
+  text-overflow: ellipsis;
+  letter-spacing: $letter-spacing;
+  white-space: nowrap;
+
+  @media (min-width: $breakpoint-large) {
+    margin-bottom: 0.5rem;
+    font-size: 1.5rem;
+  }
+}
+
+.card__rating {
+  display: flex;
+  align-items: center;
+}
+
+.card__vote {
+  margin-left: 1rem;
+  font-size: 1.2rem;
+  color: $text-color-grey;
+
+  @media (min-width: $breakpoint-large) {
+    font-size: 1.4rem;
+  }
+}
+
+
+
+@media (max-width: $breakpoint-xsmall - 1) {
+  .card__name,
+  .card__rating {
+    display: none;
+  }
+}
+
 
 
 
